May 16 2024
Added:
 the beginning of the spell system
-----------------------------------------------------------------------------------------
May 15 2024
Added:
 mana to Entity
-----------------------------------------------------------------------------------------
May 13 2024
Fixed:
 when you start the game you can pickup the robe
 then re-enter the bathroom and pickup the robe again

 scenes now print before room text

Added:
 SchoolEntrance struct

Moved:
 all_scenes.rs to lib
-----------------------------------------------------------------------------------------
May 12 2024
Added:
 spells.rs

 spell_circle to Entity
 
 get_spell_lore()
 print_spell()

 get_circle_lore()
 print_circle()

 Stage struct

 Seat struct

 fourth_scene()

 interact_with_item()

 fifth_scene()
Removed:
 stats from Entity
-----------------------------------------------------------------------------------------
May 9 2024
Added:
 more flavor text to search text

 SchoolAuditorium struct
Changed:
 formating of the search text
-----------------------------------------------------------------------------------------
May 8 2024
Added:
 dialogue.rs

 CampusSquare struct

 CAMPUSSQUAREMAP

 third_scene()

Changed:
 print_dialogue() to get_dialogue()
 it now calls print_dialogue() in dialogue.rs
-----------------------------------------------------------------------------------------
May 7 2024
Added:
 npcs.rs

 BasicNPC struct

 DormOffice struct

 npc_interaction.rs

 print_dialogue()

 get_npc_index()
-----------------------------------------------------------------------------------------
May 6 2024
Added:
 DormRoom struct
 
 SchoolDorms struct

 DORMMAP interactable

 Hallway is now creates 4 different hallways
 hallway_e1 hallway_e2 hallway_w1 hallway_w2
-----------------------------------------------------------------------------------------
May 5 2024
Added:
 pickup item now prints some text

 Changed:
 printing now has a blank space between 
 the different blocks of text